--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,16 +1,15 @@
 ---
-name: Tails Azimuth
-avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
-twitter: https://twitter.com/Twitter
-linkedin: https://www.linkedin.com
-github: https://github.com
+name: Bartek Zabek
+avatar: /static/images/avatar.jpg
+occupation: Software Engineer
+email: bzabekk@gmail.com
+linkedin: https://www.linkedin.com/in/bart%C5%82omiej-z%C4%85bek-626935234/
+github: https://github.com/zombinator1
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
+Hi, I’m glad you’re here!
 
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
+This blog is my space to share interesting insights and ideas related to software engineering.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+I graduated in Electronics and Telecommunication, and during my studies I discovered a true passion for programming. That passion led me to start my journey
+as a Software Engineer in 2022, and since then I’ve been continuously learning, building, and exploring the world of software development.
